[gd_scene load_steps=25 format=3 uid="uid://gbl1q3e8sop0"]

[ext_resource type="Script" path="res://scripts/graeae.gd" id="1_diuei"]
[ext_resource type="Shader" path="res://scripts/shaders/glitch.gdshader" id="2_n178q"]
[ext_resource type="Texture2D" uid="uid://dsxe42rhh0i5l" path="res://assets/sprites/graeae.png" id="3_ifpgg"]
[ext_resource type="PackedScene" uid="uid://d557kilnx4qe" path="res://scenes/components/billboard_component.tscn" id="4_snmrf"]
[ext_resource type="PackedScene" uid="uid://dt6bxmw7stlh8" path="res://scenes/components/interact_box.tscn" id="5_lyowc"]
[ext_resource type="Script" path="res://scripts/monteHandler.gd" id="6_iba7j"]
[ext_resource type="PackedScene" uid="uid://beabw8ir817ar" path="res://scenes/components/action_label.tscn" id="6_yv6ta"]
[ext_resource type="PackedScene" uid="uid://b3olvk0uaabxt" path="res://scenes/cup.tscn" id="7_6con7"]
[ext_resource type="Texture2D" uid="uid://4awym5lfpoaw" path="res://assets/temp/eyeball.png" id="8_wj4ev"]
[ext_resource type="Texture2D" uid="uid://0o2dmpxsjwxe" path="res://assets/sprites/invis_helmet.png" id="9_yqlps"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xr7an"]
render_priority = 0
shader = ExtResource("2_n178q")
shader_parameter/num_sections = 7.0
shader_parameter/max_section_offset = 0.1
shader_parameter/image_speed = null
shader_parameter/offset_speed = 5.0
shader_parameter/image_seed = 0.0
shader_parameter/offset_seed = 0.0
shader_parameter/transparency = 0.8
shader_parameter/image1 = ExtResource("3_ifpgg")
shader_parameter/image2 = ExtResource("3_ifpgg")
shader_parameter/image3 = ExtResource("3_ifpgg")

[sub_resource type="PlaneMesh" id="PlaneMesh_wf2nw"]
material = SubResource("ShaderMaterial_xr7an")
flip_faces = true
size = Vector2(1, 2)
orientation = 2

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qna4t"]
load_path = "res://.godot/imported/graeae.png-25805e0b26a79313fcd09fc5995ebcf6.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xpnk6"]
load_path = "res://.godot/imported/graeae.png-25805e0b26a79313fcd09fc5995ebcf6.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vb51a"]
load_path = "res://.godot/imported/graeae.png-25805e0b26a79313fcd09fc5995ebcf6.s3tc.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7eclm"]
render_priority = 0
shader = ExtResource("2_n178q")
shader_parameter/num_sections = 7.0
shader_parameter/max_section_offset = 0.1
shader_parameter/image_speed = null
shader_parameter/offset_speed = 5.0
shader_parameter/image_seed = 0.0
shader_parameter/offset_seed = 21.9
shader_parameter/transparency = 0.0
shader_parameter/image1 = SubResource("CompressedTexture2D_qna4t")
shader_parameter/image2 = SubResource("CompressedTexture2D_xpnk6")
shader_parameter/image3 = SubResource("CompressedTexture2D_vb51a")

[sub_resource type="PlaneMesh" id="PlaneMesh_ocahs"]
material = SubResource("ShaderMaterial_7eclm")
flip_faces = true
size = Vector2(1, 2)
orientation = 2

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_26ktd"]
load_path = "res://.godot/imported/graeae.png-25805e0b26a79313fcd09fc5995ebcf6.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1ilw3"]
load_path = "res://.godot/imported/graeae.png-25805e0b26a79313fcd09fc5995ebcf6.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5vybo"]
load_path = "res://.godot/imported/graeae.png-25805e0b26a79313fcd09fc5995ebcf6.s3tc.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ihqm"]
render_priority = 0
shader = ExtResource("2_n178q")
shader_parameter/num_sections = 7.0
shader_parameter/max_section_offset = 0.1
shader_parameter/image_speed = null
shader_parameter/offset_speed = 5.0
shader_parameter/image_seed = 0.0
shader_parameter/offset_seed = 62.5
shader_parameter/transparency = 0.0
shader_parameter/image1 = SubResource("CompressedTexture2D_26ktd")
shader_parameter/image2 = SubResource("CompressedTexture2D_1ilw3")
shader_parameter/image3 = SubResource("CompressedTexture2D_5vybo")

[sub_resource type="PlaneMesh" id="PlaneMesh_b64vp"]
material = SubResource("ShaderMaterial_4ihqm")
size = Vector2(1, 2)
orientation = 2

[sub_resource type="Animation" id="Animation_2u3rb"]
resource_name = "cupping"
length = 2.5
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cupMoveSound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x6hg7"]
_data = {
"cupping": SubResource("Animation_2u3rb")
}

[node name="graeae" type="Node3D"]
script = ExtResource("1_diuei")

[node name="graeaeMesh" type="MeshInstance3D" parent="."]
layers = 4
mesh = SubResource("PlaneMesh_wf2nw")

[node name="billboardComponent" parent="graeaeMesh" instance=ExtResource("4_snmrf")]

[node name="sisterMesh1" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0.612, 0, -0.328)
layers = 4
mesh = SubResource("PlaneMesh_ocahs")

[node name="sisterMesh2" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, -0.5, -0.612, 0, -0.328)
layers = 4
mesh = SubResource("PlaneMesh_b64vp")

[node name="trigger1" parent="." instance=ExtResource("5_lyowc")]
size = Vector3(1, 2, 1)
object_name = "graeae"
object_prompt = "TALK [INTERACT]"
interact_ret = "graeae_talk"

[node name="trigger2" parent="." instance=ExtResource("5_lyowc")]
object_name = "graeae"
object_prompt = "TALK [INTERACT]"
interact_ret = "graeae_explanation"
interactable = false
on_start = false

[node name="trigger3" parent="." instance=ExtResource("5_lyowc")]
object_name = "graeae"
object_prompt = "TAKE
Ἅϊδος κυνέη 
[INTERACT]"
interact_ret = "graeae_take_helmet"
interactable = false
on_start = false

[node name="table" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.544338, -0.503407)
use_collision = true
size = Vector3(1.16016, 0.951019, 0.731445)

[node name="seat" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.176338, -0.544338, -0.00196183)
size = Vector3(0.53418, 0.951019, 0.254105)

[node name="monteCam" type="Camera3D" parent="."]
transform = Transform3D(-1, -3.47198e-08, 8.02326e-08, 0, 0.917754, 0.397148, -8.74228e-08, 0.397148, -0.917754, 0, 0.305, -1.28)
cull_mask = 1048573
fov = 50.0

[node name="monteUI" type="Control" parent="monteCam"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="actionLabel" parent="monteCam/monteUI" instance=ExtResource("6_yv6ta")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 20.0
grow_horizontal = 1
grow_vertical = 1
original_text = "SELECT CUP: [LEFT] - [RIGHT] 
CHOOSE CUP: [INTERACT]



"

[node name="monteHandler" type="Node3D" parent="."]
script = ExtResource("6_iba7j")

[node name="pos0" type="Node3D" parent="monteHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.009, -0.727379)

[node name="pos1" type="Node3D" parent="monteHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.009, -0.5)

[node name="pos2" type="Node3D" parent="monteHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.009, -0.5)

[node name="cup0" parent="monteHandler" instance=ExtResource("7_6con7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00867154, -0.727379)
has_item = true

[node name="cup1" parent="monteHandler" instance=ExtResource("7_6con7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.009, -0.5)
cup_index = 1
slot = 1

[node name="cup2" parent="monteHandler" instance=ExtResource("7_6con7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.009, -0.5)
cup_index = 2
slot = 2

[node name="secret" type="Sprite3D" parent="monteHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.009, -0.726)
pixel_size = 0.003
texture_filter = 0
texture = ExtResource("8_wj4ev")

[node name="invisHelmet" type="Sprite3D" parent="monteHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.035, 0.008, -0.617)
flip_h = true
pixel_size = 0.006
texture_filter = 0
texture = ExtResource("9_yqlps")

[node name="billboardComponent" parent="monteHandler/invisHelmet" instance=ExtResource("4_snmrf")]
do_billboard = false

[node name="moveTimer" type="Timer" parent="monteHandler"]

[node name="graeaeAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x6hg7")
}

[node name="cupAudio" type="AudioStreamPlayer3D" parent="."]
